# core-agent

./: README.md  setup.cfg
core_agent/: base.py
docs/: replicate.md  togetherai.md
tests/: test_langchain_chat.py  test_langchain_tool_calling.py  test_llamacpp.py
