[metadata]
name = core_agent
version = 0.0.0
description = agent implementations
long_description = file: README.md
long_description_content_type = text/markdown
# license_files = LICENSE
requires_python = >=3.6

[options]
packages =
    find:
install_requires =
    numpy
    langchain
    langgraph
    langchain-openai
    langchain-community
    langchain-together

[bdist_wheel]
universal = 1